stopped keyboarding started mousing

--- a/app.html
+++ b/app.html
@@ -2,6 +2,7 @@
 <html>
     <head></head>
     <body>
+        <canvas width="640" height="320" id="canvas_elem"></canvas>
         <script src="script.js"></script>
     </body>
 </html>
